[package]
name = "mozwire"
description = "MozillaVPN wireguard configuration manager"
categories = ["command-line-utilities", "authentication", "config"]
keywords = ["wireguard", "vpn", "mozilla", "cross-platform", "linux"]
authors = ["Nils <nils@nilsand.re>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NilsIrl/MozWire/"
readme = "README.md"
version = "0.7.0"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
base64 = "0.12.3"
clap = { version = "2.33.3", features = ["color", "wrap_help"] }
hostname = "0.3.1"
percent-encoding = "2.1.0"
rand = "0.7.3"
regex = "1.3.9"
reqwest = { version = "0.10.7", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
sha2 = "0.9.1"
sys-info = "0.7.0"
tiny_http = "0.8.0"
webbrowser = "0.5.5"
x25519-dalek = "0.6.0"
