[package]
name = "mozwire"
description = "MozillaVPN wireguard configuration manager"
categories = ["command-line-utilities", "authentication", "config"]
keywords = ["wireguard", "vpn", "mozilla", "cross-platform", "linux"]
authors = ["Nils <nils@nilsand.re>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NilsIrl/MozWire/"
readme = "README.md"
version = "0.8.0"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
base64 = "0.13.0"
clap = { version = "3.2.5", features = ["color", "derive", "env", "wrap_help"] }
percent-encoding = "2.1.0"
rand = "0.7.3"
regex = "1.5.6"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
sha2 = "0.10.2"
sys-info = "0.9.1"
tiny_http = "0.11.0"
webbrowser = "0.7.1"
x25519-dalek = "1.2.0"
